<!--
  ~ The Clear BSD License
  ~
  ~ Copyright (c) 2016, Tobias Modschiedler (mail@m-to.de)
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted (subject to the limitations in the disclaimer
  ~ below) provided that the following conditions are met:
  ~
  ~ * Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ * Neither the name of the copyright holder nor the names of its contributors may be used
  ~   to endorse or promote products derived from this software without specific
  ~   prior written permission.
  ~
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
  ~ LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
  ~ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
  ~ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
  ~ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
  ~ LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
  ~ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
  ~ DAMAGE.
  -->

<resources>
    <string name="app_name">ToPPgen</string>
    <string name="label_master">Master</string>
    <string name="label_impulse_length">Impulse length</string>
    <string name="label_volume_lock">Max volume</string>
    <string name="label_stay_awake">Screen on</string>
    <string name="label_slope_rise">Slope rise</string>
    <string name="label_slope_fall">Slope fall</string>
    <string name="supply_voltage">Supply: %1$.1f V</string>
    <string name="motor_voltage">Motor: %1$.1f V</string>
    <string name="label_impulse_delay">Impulse delay</string>
    <string name="label_power_hi">Power Hi</string>
    <string name="label_power_lo">Power Lo</string>
    <string name="value_ms">%1$d ms</string>
    <string name="value_percent">%1$d%%</string>
    <string name="value_volt">%1$.1f V</string>
    <string name="set">Set</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="plugged">Audio jack plugged.</string>
    <string name="not_plugged">Audio jack not plugged!</string>
    <string name="master_taps">Audio jack not plugged; tap one more time to start anyway.</string>
    <string name="no_audiofocus">Audio focus not granted.</string>
    <string name="set_voltages">Edit voltages</string>
    <string name="label_supply">Supply</string>
    <string name="label_motor">Motor</string>
    <string name="impulse_explanation">Visual explanation of the impulse parameters.</string>
</resources>
