<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The Clear BSD License
  ~
  ~ Copyright (c) 2016, Tobias Modschiedler (mail@m-to.de)
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted (subject to the limitations in the disclaimer
  ~ below) provided that the following conditions are met:
  ~
  ~ * Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ * Neither the name of the copyright holder nor the names of its contributors may be used
  ~   to endorse or promote products derived from this software without specific
  ~   prior written permission.
  ~
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
  ~ LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
  ~ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
  ~ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
  ~ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
  ~ LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
  ~ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
  ~ DAMAGE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideOverlay"
    android:id="@+id/activity_main">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.m_to.toppgen.MainActivity">

    <TextView
        android:text="@string/label_volume_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textVolLock"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:saveEnabled="false" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textPulseWidth"
        android:layout_toEndOf="@+id/textPulseWidth"
        android:id="@+id/seekImpulseLength"
        android:progress="0"
        android:saveEnabled="false"
        android:layout_toRightOf="@+id/textPulseWidth" />

    <TextView
        android:text="@string/value_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewImpulseLength"
        android:layout_below="@+id/textPulseWidth"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/label_impulse_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewImpulseLength"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/control_vertical_margin"
        android:id="@+id/textImpulseDelay"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textImpulseDelay"
        android:layout_alignStart="@+id/seekImpulseLength"
        android:id="@+id/seekImpulseDelay"
        android:saveEnabled="false"
        android:layout_alignLeft="@+id/seekImpulseLength" />

    <TextView
        android:text="@string/label_impulse_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/control_vertical_margin"
        android:id="@+id/textPulseWidth"
        android:layout_below="@+id/viewDutyCycle"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />


    <TextView
        android:text="@string/value_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewImpulseDelay"
        android:layout_below="@+id/textImpulseDelay"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/label_slope_rise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewImpulseDelay"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/control_vertical_margin"
        android:id="@+id/textSlopeRise"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textSlopeRise"
        android:layout_alignStart="@+id/seekImpulseDelay"
        android:id="@+id/seekSlopeRise"
        android:saveEnabled="false"
        android:layout_alignLeft="@+id/seekImpulseDelay" />

    <TextView
        android:text="@string/value_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewSlopeRise"
        android:layout_below="@+id/textSlopeRise"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/label_slope_fall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSlopeRise"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/control_vertical_margin"
        android:id="@+id/textSlopeFall"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textSlopeFall"
        android:layout_alignStart="@+id/seekImpulseDelay"
        android:id="@+id/seekSlopeFall"
        android:saveEnabled="false"
        android:layout_alignLeft="@+id/seekImpulseDelay" />

    <TextView
        android:text="@string/value_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewSlopeFall"
        android:layout_below="@+id/textSlopeFall"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <ToggleButton
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleStayAwake"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/textAwake"
        android:layout_alignParentEnd="true"
        android:saveEnabled="false"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentRight="true" />

    <ToggleButton
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleVolLock"
        android:layout_below="@+id/textVolLock"
        android:layout_centerHorizontal="true"
        android:saveEnabled="false" />

    <ToggleButton
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleMaster"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/textMaster"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/label_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textMaster"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/toggleMaster"
        android:saveEnabled="false"
        android:layout_alignLeft="@+id/toggleMaster" />

    <TextView
        android:text="@string/label_stay_awake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAwake"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/toggleStayAwake"
        android:saveEnabled="false"
        android:layout_alignLeft="@+id/toggleStayAwake" />

    <TextView
        android:text="@string/label_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textDuty"
        android:layout_marginTop="@dimen/control_vertical_margin"
        android:layout_below="@+id/viewSupplyVoltage"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/label_supply_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSupplyVoltage"
        android:layout_marginTop="@dimen/control_vertical_margin_half"
        android:layout_below="@+id/viewPlugged"
        android:layout_alignParentStart="true"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/label_motor_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textMotorVoltage"
        android:saveEnabled="false"
        android:layout_alignBaseline="@+id/textSupplyVoltage"
        android:layout_alignBottom="@+id/textSupplyVoltage"
        android:layout_alignStart="@+id/textVolLock"
        android:layout_alignLeft="@+id/textVolLock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSupplyVoltage"
        android:layout_alignParentStart="true"
        android:id="@+id/viewSupplyVoltage"
        android:text="@string/value_volt"
        android:saveEnabled="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/value_volt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMotorVoltage"
        android:layout_alignStart="@+id/textMotorVoltage"
        android:id="@+id/viewMotorVoltage"
        android:saveEnabled="false"
        android:layout_alignLeft="@+id/textMotorVoltage" />

    <ImageButton
        android:src="@android:drawable/ic_menu_preferences"
        android:contentDescription="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonVoltages"
        android:layout_alignTop="@+id/textMotorVoltage"
        android:layout_alignParentEnd="true"
        android:saveEnabled="false"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/not_plugged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleMaster"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/control_vertical_margin_half"
        android:saveEnabled="false"
        android:id="@+id/viewPlugged"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekDutyCycle"
        android:max="100"
        android:progress="20"
        android:saveEnabled="false"
        android:layout_alignTop="@+id/textDuty"
        android:layout_toRightOf="@+id/textPulseWidth"
        android:layout_toEndOf="@+id/textPulseWidth" />

    <TextView
        android:text="@string/value_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewDutyCycle"
        android:saveEnabled="false"
        android:layout_below="@+id/seekDutyCycle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>